# Graduation-Project

./: .gitignore  README-EN.md  README.md  main.py  pyproject.toml
data/: news_value_scores.json
data/processed/: metadata.json
data/processed/analytics/: data_report.md  dataset_statistics.json
data/processed/analytics/tables/: category_ctr_dev.csv  category_ctr_train.csv  history_length_dev.csv  history_length_train.csv  hourly_behavior_dev.csv  hourly_behavior_train.csv  impression_length_dev.csv  impression_length_train.csv  news_category_distribution.csv  news_subcategory_distribution.csv  news_subcategory_top.csv
docs/plans/: 2026-03-09-multimodal-news-rec-design.md  2026-03-09-multimodal-news-rec-plan.md
docs/superpowers/plans/: 2026-03-14-replace-timeliness-with-conflict.md
docs/superpowers/specs/: 2026-03-14-replace-timeliness-with-conflict-design.md
scripts/: __init__.py  annotate_news_value.py  dataset_report.py  evaluate.py  extract_features.py  feature_report.py  preprocess.py  train.py
src/: __init__.py
src/data/: __init__.py  analytics.py  dataset.py  feature_analytics.py  preprocess.py
src/features/: __init__.py  news_value_annotator.py  siglip_extractor.py
src/models/: __init__.py  gated_fusion.py  news_encoder.py  nrms.py  user_encoder.py
src/utils/: __init__.py  config.py  env.py  metrics.py
tests/: test_annotate_news_value.py  test_dataset_analytics.py  test_feature_analytics.py  test_model_forward.py  test_news_value_annotator.py  test_preprocess.py
